--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title> Monkey of the World -- Monkeys and everything about them; Ottawa Canada</title>
-<link href="../css/general.css" rel="stylesheet">
-<link href="../css/grid.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
 <meta name="handheldfriendly" content="true">
 <meta name= "mobileoptimized" content="240">
 <meta name= "viewport" content= "width=device-width,initial-scale=1">
