--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 -->
 			<nav> 
 				<ul>
-					<li> <a href="index.html"> Home </a> </li>
-					<li> <a href="species.html" > Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}index.html"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}species.html" > Monkey Types</a> </li>
 					<li> <a href=""> Habitats </a> </li>
 					<li> <a href=""> Anatomy </a> </li>
 					<li> <a href=""> Behaviors </a> </li>
@@ -59,8 +59,8 @@
 		<header>
 			<nav> 
 				<ul>
-					<li> <a href="index.html"> Home </a> </li>
-					<li> <a href="species.html" > Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}index.html"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}species.html" > Monkey Types</a> </li>
 					<li> <a href=""> Habitats </a> </li>
 					<li> <a href=""> Anatomy </a> </li>
 					<li> <a href=""> Behaviors </a> </li>
