Removed spaces from the URLs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title> Monkey of the World -- Monkeys and everything about them; Ottawa Canada</title>
-<link href="{{site.baseurl}} /css/general.css" rel="stylesheet">
-<link href="{{site.baseurl}} /css/grid.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
 <meta name="handheldfriendly" content="true">
 <meta name= "mobileoptimized" content="240">
 <meta name= "viewport" content= "width=device-width,initial-scale=1">
@@ -28,8 +28,8 @@
 -->
 			<nav> 
 				<ul>
-					<li> <a href="{{site.baseurl}} index.html"> Home </a> </li>
-					<li> <a href="{{site.baseurl}} species.html" > Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}/index.html"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}/species.html" > Monkey Types</a> </li>
 					<li> <a href=""> Habitats </a> </li>
 					<li> <a href=""> Anatomy </a> </li>
 					<li> <a href=""> Behaviors </a> </li>
