--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <meta name="handheldfriendly" content="true">
 <meta name= "mobileoptimized" content="240">
 <meta name= "viewport" content= "width=device-width,initial-scale=1">
-<meta name= "description" content= "Monkeys Monkeys Monkeys Monkeys Monkeys and information all about them">
+<meta name= "description" content= "Monkeys and information all about them">
 </head>
 
 <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
@@ -17,6 +17,25 @@
 
 
 <body>
+
+<!-- facebook -->
+	<meta property="og:type" content="article">
+	<meta property="og:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
+	<meta property="og:url" content=" http://tuor0002.github.io/large-data-website/ ">
+	<!-- Image Size: minimum 200x200; recommended 1500x1500 -->
+	<meta property="og:image" content="http://domain.com/img/thing/jpg">
+	<meta property="og:description" content="Monkeys and information all about them">
+	<meta property="og:site_name" content=" MonkeyRus">
+	
+	
+	
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary">
+	<meta property="twitter:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
+	<meta property="twitter:url" content=" http://tuor0002.github.io/large-data-website/ ">
+	<!-- Image Size: 120x120-->
+	<meta property="twitter:image" content="http://domain.com/img/thing/jpg">
+	<meta property="twitter:description" content="Monkeys and information all about them">
 
 	<header>
 	<!--
@@ -28,11 +47,11 @@
 -->
 			<nav> 
 				<ul>
-					<li> <a href="{{site.baseurl}}/index.html"> Home </a> </li>
-					<li> <a href="{{site.baseurl}}/species.html" > Monkey Types</a> </li>
-					<li> <a href=""> Habitats </a> </li>
-					<li> <a href=""> Anatomy </a> </li>
-					<li> <a href=""> Behaviors </a> </li>
+					<li> <a href="{{site.baseurl}}index.html" rel="home"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}species.html" rel="species"> Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}" rel="habitats"> Habitats </a> </li>
+					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
+					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
 				</ul>
 			</nav>
 	</header>
@@ -59,11 +78,11 @@
 		<header>
 			<nav> 
 				<ul>
-					<li> <a href="{{site.baseurl}}index.html"> Home </a> </li>
-					<li> <a href="{{site.baseurl}}species.html" > Monkey Types</a> </li>
-					<li> <a href=""> Habitats </a> </li>
-					<li> <a href=""> Anatomy </a> </li>
-					<li> <a href=""> Behaviors </a> </li>
+					<li> <a href="{{site.baseurl}}index.html" rel="home"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}species.html" rel="species"> Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}" rel="habitats"> Habitats </a> </li>
+					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
+					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
 				</ul>
 			</nav>
 	</header>
