tiral to fix nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,8 @@
 -->
 			<nav> 
 				<ul>
-					<li> <a href="{{site.baseurl}}index.html" rel="home"> Home </a> </li>
-					<li> <a href="{{site.baseurl}}species.html" rel="species"> Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}/species.html" rel="species"> Monkey Types</a> </li>
 					<li> <a href="{{site.baseurl}}" rel="habitats"> Habitats </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
