--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 				<ul>
 					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home </a> </li>
 					<li> <a href="{{site.baseurl}}/species.html" rel="species"> Monkey Types</a> </li>
-					<li> <a href="{{site.baseurl}}" rel="habitats"> Habitats </a> </li>
+					<li> <a href="{{site.baseurl}}/habitats.html" rel="habitats"> Habitats </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
 				</ul>
@@ -80,7 +80,7 @@
 				<ul>
 					<li> <a href="{{site.baseurl}}index.html" rel="home"> Home </a> </li>
 					<li> <a href="{{site.baseurl}}species.html" rel="species"> Monkey Types</a> </li>
-					<li> <a href="{{site.baseurl}}" rel="habitats"> Habitats </a> </li>
+					<li> <a href="{{site.baseurl}}/habitats.html" rel="habitats"> Habitats </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
 					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
 				</ul>
