--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<meta property="og:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
 	<meta property="og:url" content=" http://tuor0002.github.io/large-data-website/ ">
 	<!-- Image Size: minimum 200x200; recommended 1500x1500 -->
-	<meta property="og:image" content="http://domain.com/img/thing/jpg">
+	<meta property="og:image" content="images/facebook-icon.jpg">
 	<meta property="og:description" content="Monkeys and information all about them">
 	<meta property="og:site_name" content=" MonkeyRus">
 	
@@ -34,7 +34,7 @@
 	<meta property="twitter:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
 	<meta property="twitter:url" content=" http://tuor0002.github.io/large-data-website/ ">
 	<!-- Image Size: 120x120-->
-	<meta property="twitter:image" content="http://domain.com/img/thing/jpg">
+	<meta property="twitter:image" content="images/twitter-icon.jpg">
 	<meta property="twitter:description" content="Monkeys and information all about them">
 
 	<header>
