--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,12 @@
 <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Dosis:300,400' rel='stylesheet' type='text/css'>
 
-
-
-<body>
-
 <!-- facebook -->
 	<meta property="og:type" content="article">
 	<meta property="og:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
 	<meta property="og:url" content=" http://tuor0002.github.io/large-data-website/ ">
 	<!-- Image Size: minimum 200x200; recommended 1500x1500 -->
-	<meta property="og:image" content="images/facebook-icon.jpg">
+	<meta property="og:image" content=" http://tuor0002.github.io/images/facebook-icon.jpg">
 	<meta property="og:description" content="Monkeys and information all about them">
 	<meta property="og:site_name" content=" MonkeyRus">
 	
@@ -34,7 +30,7 @@
 	<meta property="twitter:title" content=" Monkey of the World -- Monkeys and everything about them; Ottawa Canada ">
 	<meta property="twitter:url" content=" http://tuor0002.github.io/large-data-website/ ">
 	<!-- Image Size: 120x120-->
-	<meta property="twitter:image" content="images/twitter-icon.jpg">
+	<meta property="twitter:image" content=" http://tuor0002.github.io/images/twitter-icon.jpg">
 	<meta property="twitter:description" content="Monkeys and information all about them">
 
 	<header>
@@ -45,6 +41,10 @@
 </div>
 
 -->
+
+<body>
+
+
 			<nav> 
 				<ul>
 					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home </a> </li>
