--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,23 +55,28 @@
 				</ul>
 			</nav>
 	</header>
-
-		
+	
+	<center>
+		<div>
+		<img src="{{site.baseurl}}/images/logo.png" class="logo" alt"logo">
+		</div>
+	</center>
+	
 		
 		{{content}}
 		
 <div class= "grid">		
 	<!-- bottom images Left -->
 		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"A Spider monkey">
+			<img src="{{site.baseurl}}/images/defaultimage2.png" class="flex-img" alt"A Spider monkey">
 		</div>
 		<!-- bottom images Center -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"a howler monkey">
+			<img src="{{site.baseurl}}/images/defaultimage1.png" class="flex-img" alt"a howler monkey">
 		</div>
 		<!-- bottom images Right -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt" cute monkey">
+			<img src="{{site.baseurl}}/images/defaultimage3.png" class="flex-img" alt" cute monkey">
 		</div>
 </div>
 	
