--- a/css/general.css
+++ b/css/general.css
@@ -74,12 +74,22 @@ h2{
 }
 
 p {
-	font-family: "Helvetica",Gill Sans, Gill Sans MT, Myriad Pro, DejaVu Sans Condensed, Arial, sans-serif;
+	font-family:Constantia, Lucida Bright, DejaVu Serif, "Georgia", serif
 	text-align: left;
 	color: #000;
 	font-size: 1.4em;
 }
+
+.logo{
+	width:15%;
+}
 	
+a, 
+a:link,
+a:visited {
+	color: #729C4C;
+	text-decoration: none;
+}
 
 @media only screen and (min-width:20em){
 
