--- a/css/general.css
+++ b/css/general.css
@@ -105,3 +105,52 @@ nav ul {
 }
 
 }
+
+.skiplinks{
+	margin :0;
+	padding: 0;
+	position: absolute;
+	width:100%;
+	z-index: 3000;
+	
+	fontsize: 11.25em;
+	font-weight: bold;
+	list-style-type:none;
+}
+
+.skiplinks a,
+.skiplinks a:link,
+.skiplinks a:visited{
+	
+	padding: 0.75em 1em;
+	position:absolute;
+	top: -10em;
+	
+	background-color:#000;
+	
+	color: #FFF;
+	text-decoration:none;
+	
+}
+
+
+.skiplinks a:focus {
+	top:0;
+	
+}
+
+
+a,
+a:link,
+a:vistied {
+	outline:none;
+}
+
+a:hover,
+a:active {
+	outline:none;
+}
+
+a:focus {
+	outline: 3px solid #000;
+}
