--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
 					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home </a> </li>
 					<li> <a href="{{site.baseurl}}/species.html" rel="species"> Monkey Types</a> </li>
 					<li> <a href="{{site.baseurl}}/habitats.html" rel="habitats"> Habitats </a> </li>
-					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
-					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
+					<li> <a href="{{site.baseurl}}/habitats.html" rel="anatomy"> Anatomy </a> </li>
+					<li> <a href="{{site.baseurl}}/species.html" rel="behaviors"> Behaviors </a> </li>
 				</ul>
 			</nav>
 	</header>
@@ -73,15 +73,15 @@
 <div class= "grid">		
 	<!-- bottom images Left -->
 		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage2.png" class="flex-img" alt"A Spider monkey">
+			<img src="{{site.baseurl}}/images/defaultimage2.png" class="flex-img" alt"Mono Asustado">
 		</div>
 		<!-- bottom images Center -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage1.png" class="flex-img" alt"a howler monkey">
+			<img src="{{site.baseurl}}/images/defaultimage1.png" class="flex-img" alt"Black Spider Monkey">
 		</div>
 		<!-- bottom images Right -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage3.png" class="flex-img" alt" cute monkey">
+			<img src="{{site.baseurl}}/images/defaultimage3.png" class="flex-img" alt"baby patas monkey">
 		</div>
 </div>
 	
@@ -89,11 +89,11 @@
 			<nav role="navigation" id="nav"> 
 				<ul>
 					<li> <a href= "#top"> Top </a> </li>
-					<li> <a href="{{site.baseurl}}index.html" rel="home"> Home </a> </li>
-					<li> <a href="{{site.baseurl}}species.html" rel="species"> Monkey Types</a> </li>
+					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home </a> </li>
+					<li> <a href="{{site.baseurl}}/species.html" rel="species"> Monkey Types</a> </li>
 					<li> <a href="{{site.baseurl}}/habitats.html" rel="habitats"> Habitats </a> </li>
-					<li> <a href="{{site.baseurl}}" rel="anatomy"> Anatomy </a> </li>
-					<li> <a href="{{site.baseurl}}" rel="behaviors"> Behaviors </a> </li>
+					<li> <a href="{{site.baseurl}}/habitats.html" rel="anatomy"> Anatomy </a> </li>
+					<li> <a href="{{site.baseurl}}/species.html" rel="behaviors"> Behaviors </a> </li>
 				</ul>
 			</nav>
 	</header>
