--- a/css/general.css
+++ b/css/general.css
@@ -19,7 +19,7 @@ header {
 
 nav ul {
 	list-style-type: none; 
-	text-align: right;
+	text-align: center;
 }
 
 
@@ -27,12 +27,16 @@ nav li {
 	display: inline;
 }
 
+.arrow {
+	max-width: 30px;
+	padding: 0% 1% 0% 1%;
+}
 
 nav a, 
 nav a:link,
 nav a:visited {
 	font-family: 'Chango', cursive;
-	display: inline-block;
+	display: block;
 	margin: 0 1%;
 	padding: 2% 1%;
 	color: #453624;
@@ -75,8 +79,18 @@ p {
 }
 
 .logo{
-	width:15%;
+	width:25%;
+	display: center;
 }
+	
+.logo2{
+	width:15%;
+	display: none;
+}
+	
+.top {
+	min-width: 100px;
+	}
 	
 a, 
 a:link,
@@ -85,20 +99,32 @@ a:visited {
 	text-decoration: none;
 }
 
-@media only screen and (min-width:20em){
+@media only screen and (min-width:38em){
 
 nav ul {
-	text-align: center;
-}
-
-}
-
-@media only screen and (min-width:90em){
-nav ul {
+	list-style-type: none; 
 	text-align: right;
 }
 
+nav a, 
+nav a:link,
+nav a:visited {
+	display: inline-block;
 }
+
+.logo {
+	width:45%;
+	display: none;
+}
+
+.logo2 {
+	width: 15%;
+	display: inherit;
+}
+
+}
+
+
 
 .skiplinks{
 	margin :0;
