fixing stuff like type and navgigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 
 			<nav role="navigation" id="nav"> 
 				<ul> 
-					<li> <a href="{{site.baseurl}}/index.html" rel="home"> <img src="{{site.baseurl}}/images/logo.png" class="logo" alt"logo"></a> </li>
+					<li> <a href="{{site.baseurl}}/index.html" class="logonav" rel="home"> <img src="{{site.baseurl}}/images/logo.png" class="logo" alt"logo"></a> </li>
 					<li> <a href="{{site.baseurl}}/index.html" rel="home"> Home</a> </li>
 					<li> <a href="{{site.baseurl}}/species.html" rel="species"> Monkey Types</a> </li>
 					<li> <a href="{{site.baseurl}}/habitats.html" rel="habitats"> Habitats </a> </li>
@@ -74,15 +74,15 @@
 <div class= "grid">		
 	<!-- bottom images Left -->
 		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage2.png" class="flex-img" alt"Mono Asustado">
+			<img src="{{site.baseurl}}/images/defaultimage2.jpg" class="flex-img" alt"Mono Asustado">
 		</div>
 		<!-- bottom images Center -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage1.png" class="flex-img" alt"Black Spider Monkey">
+			<img src="{{site.baseurl}}/images/defaultimage1.jpg" class="flex-img" alt"Black Spider Monkey">
 		</div>
 		<!-- bottom images Right -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="{{site.baseurl}}/images/defaultimage3.png" class="flex-img" alt"baby patas monkey">
+			<img src="{{site.baseurl}}/images/defaultimage3.jpg" class="flex-img" alt"baby patas monkey">
 		</div>
 </div>
 	
