--- a/css/general.css
+++ b/css/general.css
@@ -11,6 +11,18 @@ html {
 	background-color: #FFF;
 }
 
+body {
+	margin: 0 auto;
+	max-width: 700px;
+}
+
+@media only screen and (min-width: 240px) {
+	body {
+		max-width: none;
+		
+	}
+}
+
 
 header {
 	background-color: #CCE79F;
